# symbolic

./: pyproject.toml
src/: primos.py
src/symbolic_core/: __init__.py  config.py  opcodes.py
src/symbolic_core/alife/: automata.py  rules.py
src/symbolic_core/category/: __init__.py  adele.py  limits.py  monoidal.py
src/symbolic_core/concurrent/: __init__.py  dispatcher.py  executor.py  future.py  scheduler.py
src/symbolic_core/ds/: __init__.py  hamt.py  list.py  queue.py  spatial.py  vector.py
src/symbolic_core/graph/: algebra.py  isomorphism.py  spectral.py
src/symbolic_core/hashing/: canonization.py  encoder.py  invariants.py  spectral_basis.py  utils.py
src/symbolic_core/kernel/: __init__.py  lens.py  node.py  sectors.py  strategies.py  universe.py  zipper.py
src/symbolic_core/memory/: __init__.py  allocator.py  gc.py  tagging.py  vlist.py
src/symbolic_core/optimize/: __init__.py  jit.py  matcher.py  rules.py
tests/symbolic_core/: test_config.py  test_opcodes.py
tests/symbolic_core/concurrent/: test_dispatcher.py  test_executor.py  test_future.py
tests/symbolic_core/ds/: debuj.py  test_hamt.py  test_list.py  test_queue.py  test_spatial.py  test_vector.py
tests/symbolic_core/kernel/: test_lens.py  test_node.py  test_sectors.py  test_strategies.py  test_united.py  test_universe.py  test_zipper.py
tests/symbolic_core/test_category/: test_adele.py  test_limits.py  test_monoidal.py
tests/symbolic_core/test_concurrent/: test_dispatcher.py  test_future.py
tests/symbolic_core/test_ds/: test_hamt.py  test_list.py  test_queue.py  test_vector.py
(+15 files in other folders)
